# datagame.live

./: .gitignore  planned_features.md
.circleci/: config.yml
app/: .gitignore  mix.exs
app/assets/: package-lock.json  package.json
app/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
app/lib/: app_web.ex
app/native/app_native/: Cargo.toml  README.md
app/native/app_native/src/: importer.rs  lib.rs  macros.rs  probability.rs  tinylang.rs  trivia.rs  types.rs
app/native/app_native/src/tinylang/: interpreter.rs  mod.rs  parser.rs
app/native/app_native/src/trivia/: engine.rs  hangman.rs  mod.rs  multiple_choice.rs  ranking.rs  types.rs
expo/: .gitignore  App.tsx  app.json  babel.config.js  config.ts  constants.ts  eas-build.sh  eas.json  index.js  package.json  splash_optimize.sh  styles.ts
expo/assets/: BeOS-Orthanc.aiff  BeOS-ScrubAlert.aiff
expo/components/: AnimatedChipPicker.tsx  AnswerBoxProps.ts  ChipPicker.tsx  ExpandingInfoHeader.tsx  FormattedRelativeDate.tsx  GameCustomizationScreen.tsx  GameScreen.tsx  GridLayout.tsx  KeyboardAnswerBox.tsx  Loader.tsx  LogViewer.tsx  MultipleChoiceAnswerBox.tsx  MultipleChoiceOptionView.tsx  RankingAnswerBox.tsx  RestClientProvider.tsx  RoomCreatorControls.tsx  RoomLeaderboard.tsx  RoomLobbyControls.tsx  RoomScreen.tsx  RoomStatusBar.tsx  SocketProvider.tsx  SwipeUpHandle.tsx  TriviaContainer.tsx  TriviaMatchRankDisplay.tsx  TriviaStatDisplay.tsx  TriviaView.tsx
expo/helpers/: api.ts  data.test.ts  data.ts  gameLogic.ts  hooks.ts  iconography.tsx  lang.ts  logging.ts  math.ts  navigation.ts  (+4 more)
(+128 files in other folders)
