[package]
name = "app_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "app_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
error-chain = "0.12.4"
lazy_static = "1.4.0"
nom = "7.1.3"
rand = "0.8.5"
regex = "1.8.4"
rustler = "0.29.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
smallvec = { version = "1.10.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.18.1"